# libmutex

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-mingw-build.yml
cmake/: configure.cmake  libmutexConfig.cmake.in  libnthreadConfig.cmake.in
include/: libmutex.h  libnthread.h
src/: err.c  err.h  global.c  init.c  init.h  main.c  mutex.c  strerror.c  util.c  util.h
